--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
-    "dev": "SET API_KEY=9fa0919350c54089904d325383dfe741 npx nodemon server.js",
+    "dev": "SET API_KEY=9fa0919350c54089904d325383dfe741 && node server.js",
     "test": "jest"
   },
   "author": "Saurabh Shankar",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "newsapi": "^2.4.1"
   },
   "devDependencies": {
     "jest": "^27.2.4",
